sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:21: error: ';' expected but integer literal found.
    }debut += 1
              ^